# qt_mill

./: .clangd  .gitignore  CMakeLists.txt  help.txt  readmy.txt  tree.sqlite
include/: Errors.h  INodeRepository.h  Node.h  TreeService.h  TreeWidgetEx.h  mainwindow.h  secondwindow.h  widgetsTreeFeeler.h
include/DBhead/: Db.h  INodeRepository.h
include/TreeWidgetsHed/: INodeFactory.h  TreeService.h  widgetsTreeFeeler.h
src/: Db.cpp  NodeFactory.cpp  SqliteNodeRepository.cpp  TreeService.cpp  TreeWidgetEx.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  secondwindow.cpp  secondwindow.ui  widgetsTreeFeeler.cpp
src/TreeWidgets/: TreeService.cpp  widgetsTreeFeeler.cpp
